--- a/real-hotel-se/src/main/resources/application.properties
+++ b/real-hotel-se/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=9192
+server.port=${PORT:9192}
 
-spring.datasource.url=jdbc:mysql://localhost:3306/Royal_hotel_db
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
